syntax = "proto3";

option go_package = "github.com/kuzminal/microservices/payment";

message CreatePaymentRequest {
  int64 user_id = 1;
  int64 order_id = 2;
  float total_price = 3;
}

message CreatePaymentResponse {
  int64 payment_id = 1;
}

message GetPaymentRequest {
  int64 payment_id = 1;
}

message GetPaymentResponse {
  int64 payment_id = 1;
  int64 user_id = 3;
  int64 order_id = 4;
  float total_price = 5;
  string status = 6;
}

service Payment {
  rpc Create(CreatePaymentRequest) returns (CreatePaymentResponse){}
  rpc Get(GetPaymentRequest) returns (GetPaymentResponse){}
}